	- Addeed command lines options -ex and -command to newcdb to allow passing
	  of single commands and files containg commands into newcdb on the command
	  line.
	- Define breakpoint SFR's as both page na daddress since different 
	  processors have the sfr's in different banks.  The F530 is the first one I
	  have seen which use a page other than f or no paging.
	  Found in data capture from Sean.

Henri Geist:
	- bugfix for ec2drv serial communications, to avoid missing part of the read
	  data when only a part of them has arrived at time of the read syscall
	  on the serial port.

Kolja Waschk:
	- EC2/3 Bootloader Read firmware function now fixed. (incorrect byte order
	  in address.
	- Routine to match the checksum/CRC that the EC2/3 calculated on a page of
	  memory.
	- Provided basic read debugger firmware utility.

Nebojša:
	- Allow compilation with GCC 4.1

Thomas Sailer:
	- Patch containing large number of warning fixes for GCC4

Marco Oesch:
	- Correct EC2 Firmware size for ec2rfw.c, also ensure entire debugger read
	  size set correctly.

Steve Brown:
	- Fix for EC3 not reading enough bytes causing following commands to return 
	  garbage.
	- Provided breakpoint registers for F320/1
	- Confirmed F320 ok with EC3 version 0x0d. (We now accept 0x0d as top version for EC3 firmware)
	- Identifed "copy&paste" stylebug involving debug option in writeflash.c.
	  The fix should make the option work as intended.

Frieder Ferlemann:
	- Identified several compile issues with newer GCC (Ricky added fixes for these)


Julian Lamb:
	- data captures and example code for F340 Beakpoints
	- Fix The step command always stops after the first instruction is run
	  bug in silabs target.
	- Remove "starting program" message from cmdcommon since it duplicates
	  lower layer messages.

Known issues:
	- If the device is locked reads from RAM and FLASH return 0x00 rather than
	  reporting an error

TODO:
	- choose correct clock and flash scale values for each processor.

